[tool.poetry]
name = "ask-multiple-pdfs"
version = "0.1.0"
description = "Based on the ask-multiple-pdfs project by Alejandro AO - Software & Ai @alejandro_ao"
authors = ["John Phillips <john.d.phillips@comcast.net>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.0.184"
pypdf2 = "3.0.1"
python-dotenv = "1.0.0"
streamlit = "1.18.1"
openai = "0.27.6"
altair = "4"
huggingface-hub = "0.14.1"
instructorembedding = "1.0.1"
faiss-cpu = "^1.8.0.post1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
